# Vyrtuous

./: .bashrc  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  healthcheck.sh  output.txt  pyproject.toml  restart.sh  schema.sql  script.sql  start.sh  training.jsonl  vyrtuous-local.code-workspace  vyrtuous.code-workspace  vyrtuous.sql
.devcontainer/: devcontainer.json
backups/: backup_2025-01-08_17-44-52.sql  backup_2025-01-10_14-28-22.sql  backup_2025-01-12_08-29-28.sql  backup_2025-01-15_14-05-43.sql  backup_2025-01-18_15-36-00.sql  backup_2025-01-25_01-13-50.sql  backup_2025-01-30_15-29-05.sql  backup_2025-03-27_20-04-12.sql  backup_2025-03-27_20-13-04.sql  backup_2025-03-31_17-17-29.sql  backup_2025-04-09_13-58-52.sql
schema/: .0002-migrate.sql.un~  0001-init.sql  0002-migrate.sql  0002-migrate.sql~  main.sql  vyrtuous.sql
schema/init/: init.sql
schema/password_protected/: drops.sql  encrypted.sql  no_drops.sql  owner.sql
src/: distilling_hybrid_commands_into_one_unified_python_file.py  uploads.tex
src/%OUTDIR%/: uploads.aux  uploads.fdb_latexmk  uploads.fls  uploads.out  uploads.toc
src/lucy/: __init__.py  config.py  dump.sql  main.py  my.sql  postgre.sql  psql.sql  sql.sql  sqlfile.sql  token.txt
src/lucy/bots/: discord_bot.py  linkedin_bot.py  twitch_bot.py
src/lucy/cogs/: commands.py  commands_extra.py  event_listeners.py  hybrid.py  indica.py  ruderalis.py  sativa.py  scheduled_tasks.py
src/lucy/utils/: __init__.py  add_watermark.py  adjust_hue_and_saturation.py  ai.py  average_score.py  backup.py  benchmark.py  chemistry.py  citation_manager.py  clear_screen.py  combine.py  config.py  create_batch_completion.py  create_completion.py  create_https_completion.py  create_https_moderation.py  create_moderation.py  discord_bot.py  discord_oauth.py  discord_utils.py  draw_fingerprint.py  draw_watermarked_molecule.py  fine_tuning.py  format_error_check.py  frames.py  game.py  get_mol.py  get_molecule_name.py  get_proximity.py  google.py  gsrs.py  helpers.py  image.py  increment_version.py  linkedin.py  linkedin_bot.py  linkedin_oauth.py  linkedin_oauth.py.save  load_contents.py  load_yaml.py  (+20 more)
src/py_vyrtuous/: config.py  main.py
src/py_vyrtuous/bots/: discord_bot.py
src/py_vyrtuous/cogs/: commands.py  commands_extra.py  event_listeners.py  scheduled_tasks.py
src/vyrtuous/: .coverage  __init__.py  config.py  database.py  main.py  py.py
src/vyrtuous/administrator/: __init__.py  (+3 more)
(+757 files in other folders)
