[build-system]
requires = [ "poetry-core", "setuptools",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "vyrtuous"
version = "6.0.6"
description = ""
license = "GPL-3.0-or-later"
authors = [ "Brandon Graham Cobb <brandongrahamcobb@icloud.com>",]
readme = "README.md"
homepage = "https://brandongcobb.com"
repository = "https://github.com/brandongrahamcobb/Vyrtuous.git"
keywords = [ "json", "python", "yaml",]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.11"
asyncpg = "^0.30.0"
discord = "^2.3.2"
quart = "^0.20.0"
python-dotenv = "^1.2.1"

[tool.poetry.scripts]
vyrtuous = "vyrtuous.main:run"

[tool.poetry.dependencies.discord-py]
extras = [ "voice",]
version = "^2.5.2"
