[build-system]
requires = [ "poetry-core", "setuptools",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "vyrtuous"
version = "6.0.6"
description = ""
license = "GPL-3.0-or-later"
authors = [ "Brandon Graham Cobb <brandongrahamcobb@icloud.com>",]
readme = "README.md"
homepage = "https://brandongcobb.com"
repository = "https://github.com/brandongrahamcobb/Vyrtuous.git"
keywords = [ "json", "python", "yaml",]
packages = [{include = "vyrtuous", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.11"
asyncpg = "^0.30.0"
quart = "^0.20.0"
python-dotenv = "^1.2.1"
docker = "^7.1.0"
debugpy = "^1.8.18"
discord-py = "^2.6.4"
discord = "^2.3.2"
pytest = "^9.0.2"

[tool.poetry.scripts]
vyrtuous = "vyrtuous.main:run"


