[build-system]
requires = [ "poetry-core", "setuptools",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "vyrtuous"
version = "1.0.0"
description = ""
license = "GPL-3.0-or-later"
authors = [ "Brandon Graham Cobb <brandongrahamcobb@icloud.com>",]
readme = "README.md"
homepage = "https://brandongcobb.com"
repository = "https://gitlab.com/vyrtuous/vyrtuous.git"
keywords = [ "json", "python", "yaml",]
packages = [{include = "vyrtuous", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
aiohttp = "*"
asyncpg = "*"
quart = "*"
python-dotenv = "*"
docker = "*"
debugpy = "*"
pytest = "*"
pytest-asyncio = "*"
discord-py = {git = "https://github.com/Rapptz/discord.py.git"}
cachetools = "*"
pyflakes = "^3.4.0"

[tool.poetry.scripts]
vyrtuous = "vyrtuous.main:run"


